# PUKOSTUDIO-CONTENT

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  cache.py  config.py  database.py  logger.py  platforms.py  rate_limit.py  storage.py  task_utils.py  utils.py
backend/app/core/ai_gateway/: __init__.py  cost_tracker.py  gateway.py  prompt_manager.py  router.py  schemas.py
backend/app/modules/ai/: router.py
backend/app/modules/analyzer/: router.py
backend/app/modules/asset/: generated.py  models.py  router.py  schemas.py  search.py  search_router.py  service.py  thumbnails.py
backend/app/modules/auth/: admin.py  router.py
backend/app/modules/brand/: models.py  router.py  schemas.py  service.py
backend/app/modules/collection/: models.py  router.py  schemas.py  service.py
backend/app/modules/pipeline/: models.py  router.py  schemas.py  service.py
backend/app/modules/production/: models.py  router.py  schemas.py  service.py
backend/app/modules/project/: models.py  router.py  schemas.py  service.py
backend/app/modules/relation/: models.py  router.py  schemas.py  service.py
backend/app/modules/settings/: router.py
backend/app/workers/: main.py  registry.py
backend/migrations/: env.py
backend/migrations/versions/: 001_init_extensions.py  002_task_table.py  003_ai_call_log.py  004_asset_table.py  005_tag_tables.py  006_video_tables.py  007_pipeline.py  008_business_entities.py  009_support_tables.py  010_production.py  011_ugc_tables.py  012_users_table.py  013_user_admin_flag.py  014_asset_source_url_index.py
backend/tests/: conftest.py  test_ai_features.py  test_ai_gateway.py  test_ai_model_upgrades.py  test_analyzer_router.py  test_asset_service.py  test_auth.py  test_bulk_asset_actions.py  test_collection_service.py  test_generated_assets.py  test_health.py  test_import_url.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_pipeline_service.py  test_production_service.py  test_tag_service.py  test_thumbnails_and_upload_tags.py  test_video.py  test_worker_main.py
(+126 files in other folders)
